# django-orm-async-adapter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
example/: .editorconfig  Dockerfile  app.py  conftest.py  docker-compose.yml  manage.py  requirements.txt  settings.py  setup.cfg  start.sh
example/.ignore/postgres/postgres/: postmaster.pid
example/.ignore/postgres/postgres/base/13757/: pg_internal.init
example/.ignore/postgres/postgres/base/16384/: 1247  1249  1249_fsm  1259  16385  16386  16391  16392  16394  16395  16399  2224  2579  2604  2606  2608  2608_fsm  2610  2610_fsm  2619  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002  pg_internal.init
example/.ignore/postgres/postgres/base/24799/: 1247  1249  1259  2224  24800  24801  24806  24807  24809  24810  24810_fsm  24810_vm  24814  2579  2604  2606  2608  2610  2610_vm  2619  2619_fsm  2619_vm  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  (+8 more)
example/.ignore/postgres/postgres/global/: 1260  1262  2671  2672  2676  pg_control  pg_internal.init
example/.ignore/postgres/postgres/pg_stat_tmp/: db_0.stat  db_13757.stat  db_16384.stat  db_24799.stat  global.stat
example/.ignore/postgres/postgres/pg_xact/: 0000
example/example/: models.py  serializers.py  views.py
example/example/migrations/: 0001_initial.py
example/example/tests/: test_create.py  test_delete.py  test_get.py  test_update.py
example/scripts/: __init__.py  clean.py  examples.py  populate.py
fast_orm/: __init__.py
tests/: conftest.py
