[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fast_orm"
authors = [{name = "Vitor Nere", email = "nere.swe@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
classifiers = [
    "License :: OSI Approved :: BSD 3-Clause License (Revised)",
]
requires-python = ">=3.7"
dist-name = "fast-orm"
requires = [
    "Django >=3.2",
    "pydantic >=1.9,<2.0.0"
]

[project.urls]
Home = "https://github.com/vitornere/fast-orm"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-django",
    "flake8",
]
